result with: 4 layers ; sgd ; decay 1e-10 ;

--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -147,14 +147,14 @@
     "\n",
     "\n",
     "\n",
-    "#conv4 = Convolution2D(num_filters['wc4'], filter_size['wc4'], filter_size['wc4'], input_shape=input_size['wc4'], subsample=strides['wc4']);\n",
-    "#model.add(conv4);\n",
+    "conv4 = Convolution2D(num_filters['wc4'], filter_size['wc4'], filter_size['wc4'], input_shape=input_size['wc4'], subsample=strides['wc4']);\n",
+    "model.add(conv4);\n",
     "\n",
-    "#act4 = Activation(activation_type['wc4']);\n",
-    "#model.add(act4);\n",
+    "act4 = Activation(activation_type['wc4']);\n",
+    "model.add(act4);\n",
     "\n",
-    "#pool4 = MaxPooling2D(pool_size=pool_ratio['wc4']);\n",
-    "#model.add(pool4);\n",
+    "pool4 = MaxPooling2D(pool_size=pool_ratio['wc4']);\n",
+    "model.add(pool4);\n",
     "\n",
     "\n",
     "model.add(Flatten());\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -269,105 +269,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "2048/2048 [==============================] - 58s - loss: 0.3633 - binary_accuracy: 0.8477 - val_loss: 0.3520 - val_binary_accuracy: 0.8418\n",
+      "2048/2048 [==============================] - 62s - loss: 0.6931 - binary_accuracy: 0.5068 - val_loss: 0.6931 - val_binary_accuracy: 0.5024\n",
       "Epoch 2/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3816 - binary_accuracy: 0.8374 - val_loss: 0.3579 - val_binary_accuracy: 0.8472\n",
+      "2048/2048 [==============================] - 65s - loss: 0.6931 - binary_accuracy: 0.5078 - val_loss: 0.6931 - val_binary_accuracy: 0.4995\n",
       "Epoch 3/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3561 - binary_accuracy: 0.8521 - val_loss: 0.3447 - val_binary_accuracy: 0.8405\n",
+      "2048/2048 [==============================] - 60s - loss: 0.6931 - binary_accuracy: 0.5132 - val_loss: 0.6931 - val_binary_accuracy: 0.4961\n",
       "Epoch 4/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3737 - binary_accuracy: 0.8296 - val_loss: 0.3584 - val_binary_accuracy: 0.8438\n",
+      "2048/2048 [==============================] - 76s - loss: 0.6931 - binary_accuracy: 0.5117 - val_loss: 0.6931 - val_binary_accuracy: 0.5010\n",
       "Epoch 5/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3639 - binary_accuracy: 0.8457 - val_loss: 0.3494 - val_binary_accuracy: 0.8507\n",
+      "2048/2048 [==============================] - 89s - loss: 0.6931 - binary_accuracy: 0.5000 - val_loss: 0.6931 - val_binary_accuracy: 0.4971\n",
       "Epoch 6/50\n",
-      "2048/2048 [==============================] - 55s - loss: 0.3603 - binary_accuracy: 0.8398 - val_loss: 0.3473 - val_binary_accuracy: 0.8496\n",
+      "2048/2048 [==============================] - 72s - loss: 0.6932 - binary_accuracy: 0.4785 - val_loss: 0.6931 - val_binary_accuracy: 0.5244\n",
       "Epoch 7/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3664 - binary_accuracy: 0.8325 - val_loss: 0.3472 - val_binary_accuracy: 0.8462\n",
+      "2048/2048 [==============================] - 69s - loss: 0.6931 - binary_accuracy: 0.5054 - val_loss: 0.6931 - val_binary_accuracy: 0.5532\n",
       "Epoch 8/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3670 - binary_accuracy: 0.8359 - val_loss: 0.3533 - val_binary_accuracy: 0.8478\n",
+      "2048/2048 [==============================] - 68s - loss: 0.6931 - binary_accuracy: 0.5103 - val_loss: 0.6931 - val_binary_accuracy: 0.5034\n",
       "Epoch 9/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3837 - binary_accuracy: 0.8311 - val_loss: 0.3612 - val_binary_accuracy: 0.8408\n",
+      "2048/2048 [==============================] - 68s - loss: 0.6931 - binary_accuracy: 0.5015 - val_loss: 0.6931 - val_binary_accuracy: 0.5122\n",
       "Epoch 10/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3491 - binary_accuracy: 0.8555 - val_loss: 0.3598 - val_binary_accuracy: 0.8375\n",
+      "2048/2048 [==============================] - 68s - loss: 0.6932 - binary_accuracy: 0.4971 - val_loss: 0.6931 - val_binary_accuracy: 0.4927\n",
       "Epoch 11/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3514 - binary_accuracy: 0.8442 - val_loss: 0.3312 - val_binary_accuracy: 0.8501\n",
+      "2048/2048 [==============================] - 68s - loss: 0.6932 - binary_accuracy: 0.4912 - val_loss: 0.6931 - val_binary_accuracy: 0.4995\n",
       "Epoch 12/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3590 - binary_accuracy: 0.8423 - val_loss: 0.3554 - val_binary_accuracy: 0.8428\n",
+      "2048/2048 [==============================] - 67s - loss: 0.6931 - binary_accuracy: 0.5112 - val_loss: 0.6931 - val_binary_accuracy: 0.5923\n",
       "Epoch 13/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3611 - binary_accuracy: 0.8364 - val_loss: 0.3636 - val_binary_accuracy: 0.8380\n",
+      "2048/2048 [==============================] - 69s - loss: 0.6931 - binary_accuracy: 0.5122 - val_loss: 0.6931 - val_binary_accuracy: 0.5049\n",
       "Epoch 14/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3604 - binary_accuracy: 0.8408 - val_loss: 0.3417 - val_binary_accuracy: 0.8511\n",
+      "2048/2048 [==============================] - 66s - loss: 0.6931 - binary_accuracy: 0.5103 - val_loss: 0.6931 - val_binary_accuracy: 0.5054\n",
       "Epoch 15/50\n",
-      "2048/2048 [==============================] - 55s - loss: 0.3653 - binary_accuracy: 0.8452 - val_loss: 0.3485 - val_binary_accuracy: 0.8385\n",
+      "2048/2048 [==============================] - 73s - loss: 0.6931 - binary_accuracy: 0.4893 - val_loss: 0.6931 - val_binary_accuracy: 0.4908\n",
       "Epoch 16/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3567 - binary_accuracy: 0.8496 - val_loss: 0.3638 - val_binary_accuracy: 0.8374\n",
+      "2048/2048 [==============================] - 73s - loss: 0.6932 - binary_accuracy: 0.4922 - val_loss: 0.6931 - val_binary_accuracy: 0.5015\n",
       "Epoch 17/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3624 - binary_accuracy: 0.8320 - val_loss: 0.3429 - val_binary_accuracy: 0.8492\n",
+      "2048/2048 [==============================] - 69s - loss: 0.6931 - binary_accuracy: 0.5161 - val_loss: 0.6931 - val_binary_accuracy: 0.5584\n",
       "Epoch 18/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3691 - binary_accuracy: 0.8320 - val_loss: 0.3657 - val_binary_accuracy: 0.8398\n",
+      "2048/2048 [==============================] - 71s - loss: 0.6931 - binary_accuracy: 0.5083 - val_loss: 0.6931 - val_binary_accuracy: 0.5024\n",
       "Epoch 19/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3647 - binary_accuracy: 0.8345 - val_loss: 0.3344 - val_binary_accuracy: 0.8452\n",
+      "2048/2048 [==============================] - 70s - loss: 0.6931 - binary_accuracy: 0.5078 - val_loss: 0.6931 - val_binary_accuracy: 0.4907\n",
       "Epoch 20/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3488 - binary_accuracy: 0.8574 - val_loss: 0.3521 - val_binary_accuracy: 0.8380\n",
+      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.4941 - val_loss: 0.6931 - val_binary_accuracy: 0.5117\n",
       "Epoch 21/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.3640 - binary_accuracy: 0.8364 - val_loss: 0.3495 - val_binary_accuracy: 0.8452\n",
+      "2048/2048 [==============================] - 63s - loss: 0.6931 - binary_accuracy: 0.5176 - val_loss: 0.6931 - val_binary_accuracy: 0.5288\n",
       "Epoch 22/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3695 - binary_accuracy: 0.8350 - val_loss: 0.3349 - val_binary_accuracy: 0.8594\n",
+      "2048/2048 [==============================] - 68s - loss: 0.6931 - binary_accuracy: 0.5107 - val_loss: 0.6931 - val_binary_accuracy: 0.5652\n",
       "Epoch 23/50\n",
-      "2048/2048 [==============================] - 55s - loss: 0.3600 - binary_accuracy: 0.8384 - val_loss: 0.3270 - val_binary_accuracy: 0.8530\n",
+      "2048/2048 [==============================] - 63s - loss: 0.6931 - binary_accuracy: 0.5254 - val_loss: 0.6931 - val_binary_accuracy: 0.4976\n",
       "Epoch 24/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3612 - binary_accuracy: 0.8364 - val_loss: 0.3583 - val_binary_accuracy: 0.8398\n",
+      "2048/2048 [==============================] - 58s - loss: 0.6931 - binary_accuracy: 0.5083 - val_loss: 0.6931 - val_binary_accuracy: 0.5088\n",
       "Epoch 25/50\n",
-      "2048/2048 [==============================] - 55s - loss: 0.3528 - binary_accuracy: 0.8555 - val_loss: 0.3481 - val_binary_accuracy: 0.8390\n",
+      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.5112 - val_loss: 0.6931 - val_binary_accuracy: 0.5730\n",
       "Epoch 26/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3623 - binary_accuracy: 0.8389 - val_loss: 0.3475 - val_binary_accuracy: 0.8491\n",
+      "2048/2048 [==============================] - 60s - loss: 0.6931 - binary_accuracy: 0.5078 - val_loss: 0.6931 - val_binary_accuracy: 0.5498\n",
       "Epoch 27/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.3600 - binary_accuracy: 0.8369 - val_loss: 0.3471 - val_binary_accuracy: 0.8492\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5063 - val_loss: 0.6931 - val_binary_accuracy: 0.5136\n",
       "Epoch 28/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3504 - binary_accuracy: 0.8413 - val_loss: 0.3624 - val_binary_accuracy: 0.8438\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5195 - val_loss: 0.6931 - val_binary_accuracy: 0.4971\n",
       "Epoch 29/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3732 - binary_accuracy: 0.8389 - val_loss: 0.3459 - val_binary_accuracy: 0.8507\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5103 - val_loss: 0.6931 - val_binary_accuracy: 0.4951\n",
       "Epoch 30/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3505 - binary_accuracy: 0.8501 - val_loss: 0.3456 - val_binary_accuracy: 0.8467\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5093 - val_loss: 0.6931 - val_binary_accuracy: 0.5137\n",
       "Epoch 31/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3674 - binary_accuracy: 0.8340 - val_loss: 0.3395 - val_binary_accuracy: 0.8506\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.4995 - val_loss: 0.6931 - val_binary_accuracy: 0.5771\n",
       "Epoch 32/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3426 - binary_accuracy: 0.8452 - val_loss: 0.3517 - val_binary_accuracy: 0.8405\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5156 - val_loss: 0.6931 - val_binary_accuracy: 0.5447\n",
       "Epoch 33/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3545 - binary_accuracy: 0.8403 - val_loss: 0.3421 - val_binary_accuracy: 0.8496\n",
+      "2048/2048 [==============================] - 58s - loss: 0.6931 - binary_accuracy: 0.5229 - val_loss: 0.6931 - val_binary_accuracy: 0.5020\n",
       "Epoch 34/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3690 - binary_accuracy: 0.8428 - val_loss: 0.3544 - val_binary_accuracy: 0.8482\n",
+      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.5005 - val_loss: 0.6931 - val_binary_accuracy: 0.5238\n",
       "Epoch 35/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3457 - binary_accuracy: 0.8403 - val_loss: 0.3527 - val_binary_accuracy: 0.8433\n",
+      "2048/2048 [==============================] - 61s - loss: 0.6931 - binary_accuracy: 0.5278 - val_loss: 0.6931 - val_binary_accuracy: 0.5005\n",
       "Epoch 36/50\n",
-      "2048/2048 [==============================] - 55s - loss: 0.3600 - binary_accuracy: 0.8457 - val_loss: 0.3560 - val_binary_accuracy: 0.8452\n",
+      "2048/2048 [==============================] - 65s - loss: 0.6931 - binary_accuracy: 0.4956 - val_loss: 0.6931 - val_binary_accuracy: 0.5923\n",
       "Epoch 37/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3619 - binary_accuracy: 0.8311 - val_loss: 0.3280 - val_binary_accuracy: 0.8619\n",
+      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.5161 - val_loss: 0.6931 - val_binary_accuracy: 0.4917\n",
       "Epoch 38/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3712 - binary_accuracy: 0.8438 - val_loss: 0.3486 - val_binary_accuracy: 0.8516\n",
+      "2048/2048 [==============================] - 68s - loss: 0.6931 - binary_accuracy: 0.5132 - val_loss: 0.6931 - val_binary_accuracy: 0.5029\n",
       "Epoch 39/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3727 - binary_accuracy: 0.8428 - val_loss: 0.3554 - val_binary_accuracy: 0.8375\n",
+      "2048/2048 [==============================] - 70s - loss: 0.6930 - binary_accuracy: 0.5000 - val_loss: 0.6930 - val_binary_accuracy: 0.5156\n",
       "Epoch 40/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3521 - binary_accuracy: 0.8555 - val_loss: 0.3282 - val_binary_accuracy: 0.8589\n",
+      "2048/2048 [==============================] - 71s - loss: 0.6931 - binary_accuracy: 0.4917 - val_loss: 0.6931 - val_binary_accuracy: 0.4912\n",
       "Epoch 41/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3674 - binary_accuracy: 0.8413 - val_loss: 0.3629 - val_binary_accuracy: 0.8380\n",
+      "2048/2048 [==============================] - 61s - loss: 0.6931 - binary_accuracy: 0.5054 - val_loss: 0.6931 - val_binary_accuracy: 0.5024\n",
       "Epoch 42/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3470 - binary_accuracy: 0.8506 - val_loss: 0.3544 - val_binary_accuracy: 0.8447\n",
+      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.5225 - val_loss: 0.6931 - val_binary_accuracy: 0.5195\n",
       "Epoch 43/50\n",
-      "2048/2048 [==============================] - 55s - loss: 0.3621 - binary_accuracy: 0.8354 - val_loss: 0.3333 - val_binary_accuracy: 0.8545\n",
+      "2048/2048 [==============================] - 60s - loss: 0.6931 - binary_accuracy: 0.5103 - val_loss: 0.6931 - val_binary_accuracy: 0.5083\n",
       "Epoch 44/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3435 - binary_accuracy: 0.8452 - val_loss: 0.3413 - val_binary_accuracy: 0.8439\n",
+      "2048/2048 [==============================] - 62s - loss: 0.6931 - binary_accuracy: 0.5132 - val_loss: 0.6931 - val_binary_accuracy: 0.5764\n",
       "Epoch 45/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3562 - binary_accuracy: 0.8447 - val_loss: 0.3634 - val_binary_accuracy: 0.8423\n",
+      "2048/2048 [==============================] - 69s - loss: 0.6930 - binary_accuracy: 0.5298 - val_loss: 0.6931 - val_binary_accuracy: 0.4858\n",
       "Epoch 46/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3636 - binary_accuracy: 0.8374 - val_loss: 0.3326 - val_binary_accuracy: 0.8604\n",
+      "2048/2048 [==============================] - 69s - loss: 0.6931 - binary_accuracy: 0.5303 - val_loss: 0.6931 - val_binary_accuracy: 0.5224\n",
       "Epoch 47/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3647 - binary_accuracy: 0.8418 - val_loss: 0.3430 - val_binary_accuracy: 0.8418\n",
+      "2048/2048 [==============================] - 67s - loss: 0.6931 - binary_accuracy: 0.5195 - val_loss: 0.6931 - val_binary_accuracy: 0.5029\n",
       "Epoch 48/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3773 - binary_accuracy: 0.8345 - val_loss: 0.3400 - val_binary_accuracy: 0.8535\n",
+      "2048/2048 [==============================] - 65s - loss: 0.6930 - binary_accuracy: 0.5132 - val_loss: 0.6931 - val_binary_accuracy: 0.4922\n",
       "Epoch 49/50\n",
-      "2048/2048 [==============================] - 63s - loss: 0.3599 - binary_accuracy: 0.8462 - val_loss: 0.3540 - val_binary_accuracy: 0.8458\n",
+      "2048/2048 [==============================] - 66s - loss: 0.6931 - binary_accuracy: 0.5015 - val_loss: 0.6931 - val_binary_accuracy: 0.4927\n",
       "Epoch 50/50\n",
-      "2048/2048 [==============================] - 60s - loss: 0.3468 - binary_accuracy: 0.8472 - val_loss: 0.3525 - val_binary_accuracy: 0.8384\n"
+      "2048/2048 [==============================] - 62s - loss: 0.6932 - binary_accuracy: 0.4858 - val_loss: 0.6931 - val_binary_accuracy: 0.5000\n"
      ]
     }
    ],
