--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -147,14 +147,14 @@
     "\n",
     "\n",
     "\n",
-    "conv4 = Convolution2D(num_filters['wc4'], filter_size['wc4'], filter_size['wc4'], input_shape=input_size['wc4'], subsample=strides['wc4']);\n",
-    "model.add(conv4);\n",
+    "#conv4 = Convolution2D(num_filters['wc4'], filter_size['wc4'], filter_size['wc4'], input_shape=input_size['wc4'], subsample=strides['wc4']);\n",
+    "#model.add(conv4);\n",
     "\n",
-    "act4 = Activation(activation_type['wc4']);\n",
-    "model.add(act4);\n",
+    "#act4 = Activation(activation_type['wc4']);\n",
+    "#model.add(act4);\n",
     "\n",
-    "pool4 = MaxPooling2D(pool_size=pool_ratio['wc4']);\n",
-    "model.add(pool4);\n",
+    "#pool4 = MaxPooling2D(pool_size=pool_ratio['wc4']);\n",
+    "#model.add(pool4);\n",
     "\n",
     "\n",
     "model.add(Flatten());\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
     "\n",
     "metric_types = ['accuracy'];\n",
     "\n",
-    "learning_rate = 0.001;\n",
+    "learning_rate = 0.0001;\n",
     "\n",
     "decay_rate = 1e-10;\n",
     "\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false
    },
@@ -269,105 +269,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "2048/2048 [==============================] - 62s - loss: 0.6931 - binary_accuracy: 0.5068 - val_loss: 0.6931 - val_binary_accuracy: 0.5024\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.4912 - val_loss: 0.6930 - val_binary_accuracy: 0.4990\n",
       "Epoch 2/50\n",
-      "2048/2048 [==============================] - 65s - loss: 0.6931 - binary_accuracy: 0.5078 - val_loss: 0.6931 - val_binary_accuracy: 0.4995\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5078 - val_loss: 0.6931 - val_binary_accuracy: 0.5044\n",
       "Epoch 3/50\n",
-      "2048/2048 [==============================] - 60s - loss: 0.6931 - binary_accuracy: 0.5132 - val_loss: 0.6931 - val_binary_accuracy: 0.4961\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.5063 - val_loss: 0.6930 - val_binary_accuracy: 0.5107\n",
       "Epoch 4/50\n",
-      "2048/2048 [==============================] - 76s - loss: 0.6931 - binary_accuracy: 0.5117 - val_loss: 0.6931 - val_binary_accuracy: 0.5010\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.5024 - val_loss: 0.6931 - val_binary_accuracy: 0.4976\n",
       "Epoch 5/50\n",
-      "2048/2048 [==============================] - 89s - loss: 0.6931 - binary_accuracy: 0.5000 - val_loss: 0.6931 - val_binary_accuracy: 0.4971\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.4995 - val_loss: 0.6930 - val_binary_accuracy: 0.5058\n",
       "Epoch 6/50\n",
-      "2048/2048 [==============================] - 72s - loss: 0.6932 - binary_accuracy: 0.4785 - val_loss: 0.6931 - val_binary_accuracy: 0.5244\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5015 - val_loss: 0.6931 - val_binary_accuracy: 0.4878\n",
       "Epoch 7/50\n",
-      "2048/2048 [==============================] - 69s - loss: 0.6931 - binary_accuracy: 0.5054 - val_loss: 0.6931 - val_binary_accuracy: 0.5532\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5190 - val_loss: 0.6930 - val_binary_accuracy: 0.5122\n",
       "Epoch 8/50\n",
-      "2048/2048 [==============================] - 68s - loss: 0.6931 - binary_accuracy: 0.5103 - val_loss: 0.6931 - val_binary_accuracy: 0.5034\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.5073 - val_loss: 0.6932 - val_binary_accuracy: 0.4776\n",
       "Epoch 9/50\n",
-      "2048/2048 [==============================] - 68s - loss: 0.6931 - binary_accuracy: 0.5015 - val_loss: 0.6931 - val_binary_accuracy: 0.5122\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5166 - val_loss: 0.6930 - val_binary_accuracy: 0.5093\n",
       "Epoch 10/50\n",
-      "2048/2048 [==============================] - 68s - loss: 0.6932 - binary_accuracy: 0.4971 - val_loss: 0.6931 - val_binary_accuracy: 0.4927\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5005 - val_loss: 0.6930 - val_binary_accuracy: 0.5000\n",
       "Epoch 11/50\n",
-      "2048/2048 [==============================] - 68s - loss: 0.6932 - binary_accuracy: 0.4912 - val_loss: 0.6931 - val_binary_accuracy: 0.4995\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5054 - val_loss: 0.6931 - val_binary_accuracy: 0.4917\n",
       "Epoch 12/50\n",
-      "2048/2048 [==============================] - 67s - loss: 0.6931 - binary_accuracy: 0.5112 - val_loss: 0.6931 - val_binary_accuracy: 0.5923\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5063 - val_loss: 0.6929 - val_binary_accuracy: 0.5234\n",
       "Epoch 13/50\n",
-      "2048/2048 [==============================] - 69s - loss: 0.6931 - binary_accuracy: 0.5122 - val_loss: 0.6931 - val_binary_accuracy: 0.5049\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5132 - val_loss: 0.6930 - val_binary_accuracy: 0.5005\n",
       "Epoch 14/50\n",
-      "2048/2048 [==============================] - 66s - loss: 0.6931 - binary_accuracy: 0.5103 - val_loss: 0.6931 - val_binary_accuracy: 0.5054\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5146 - val_loss: 0.6930 - val_binary_accuracy: 0.5015\n",
       "Epoch 15/50\n",
-      "2048/2048 [==============================] - 73s - loss: 0.6931 - binary_accuracy: 0.4893 - val_loss: 0.6931 - val_binary_accuracy: 0.4908\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5088 - val_loss: 0.6930 - val_binary_accuracy: 0.4951\n",
       "Epoch 16/50\n",
-      "2048/2048 [==============================] - 73s - loss: 0.6932 - binary_accuracy: 0.4922 - val_loss: 0.6931 - val_binary_accuracy: 0.5015\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.5044 - val_loss: 0.6930 - val_binary_accuracy: 0.4985\n",
       "Epoch 17/50\n",
-      "2048/2048 [==============================] - 69s - loss: 0.6931 - binary_accuracy: 0.5161 - val_loss: 0.6931 - val_binary_accuracy: 0.5584\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.4990 - val_loss: 0.6930 - val_binary_accuracy: 0.5083\n",
       "Epoch 18/50\n",
-      "2048/2048 [==============================] - 71s - loss: 0.6931 - binary_accuracy: 0.5083 - val_loss: 0.6931 - val_binary_accuracy: 0.5024\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5088 - val_loss: 0.6930 - val_binary_accuracy: 0.5039\n",
       "Epoch 19/50\n",
-      "2048/2048 [==============================] - 70s - loss: 0.6931 - binary_accuracy: 0.5078 - val_loss: 0.6931 - val_binary_accuracy: 0.4907\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5044 - val_loss: 0.6930 - val_binary_accuracy: 0.4985\n",
       "Epoch 20/50\n",
-      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.4941 - val_loss: 0.6931 - val_binary_accuracy: 0.5117\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.4946 - val_loss: 0.6930 - val_binary_accuracy: 0.5068\n",
       "Epoch 21/50\n",
-      "2048/2048 [==============================] - 63s - loss: 0.6931 - binary_accuracy: 0.5176 - val_loss: 0.6931 - val_binary_accuracy: 0.5288\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5054 - val_loss: 0.6930 - val_binary_accuracy: 0.5015\n",
       "Epoch 22/50\n",
-      "2048/2048 [==============================] - 68s - loss: 0.6931 - binary_accuracy: 0.5107 - val_loss: 0.6931 - val_binary_accuracy: 0.5652\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5151 - val_loss: 0.6930 - val_binary_accuracy: 0.5078\n",
       "Epoch 23/50\n",
-      "2048/2048 [==============================] - 63s - loss: 0.6931 - binary_accuracy: 0.5254 - val_loss: 0.6931 - val_binary_accuracy: 0.4976\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5044 - val_loss: 0.6931 - val_binary_accuracy: 0.4912\n",
       "Epoch 24/50\n",
-      "2048/2048 [==============================] - 58s - loss: 0.6931 - binary_accuracy: 0.5083 - val_loss: 0.6931 - val_binary_accuracy: 0.5088\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5112 - val_loss: 0.6930 - val_binary_accuracy: 0.5034\n",
       "Epoch 25/50\n",
-      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.5112 - val_loss: 0.6931 - val_binary_accuracy: 0.5730\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5117 - val_loss: 0.6930 - val_binary_accuracy: 0.4985\n",
       "Epoch 26/50\n",
-      "2048/2048 [==============================] - 60s - loss: 0.6931 - binary_accuracy: 0.5078 - val_loss: 0.6931 - val_binary_accuracy: 0.5498\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5039 - val_loss: 0.6929 - val_binary_accuracy: 0.5088\n",
       "Epoch 27/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5063 - val_loss: 0.6931 - val_binary_accuracy: 0.5136\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5010 - val_loss: 0.6930 - val_binary_accuracy: 0.5092\n",
       "Epoch 28/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5195 - val_loss: 0.6931 - val_binary_accuracy: 0.4971\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.4907 - val_loss: 0.6930 - val_binary_accuracy: 0.4961\n",
       "Epoch 29/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5103 - val_loss: 0.6931 - val_binary_accuracy: 0.4951\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5024 - val_loss: 0.6931 - val_binary_accuracy: 0.4835\n",
       "Epoch 30/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5093 - val_loss: 0.6931 - val_binary_accuracy: 0.5137\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5093 - val_loss: 0.6930 - val_binary_accuracy: 0.4995\n",
       "Epoch 31/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.4995 - val_loss: 0.6931 - val_binary_accuracy: 0.5771\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5098 - val_loss: 0.6930 - val_binary_accuracy: 0.4995\n",
       "Epoch 32/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.5156 - val_loss: 0.6931 - val_binary_accuracy: 0.5447\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5151 - val_loss: 0.6930 - val_binary_accuracy: 0.5088\n",
       "Epoch 33/50\n",
-      "2048/2048 [==============================] - 58s - loss: 0.6931 - binary_accuracy: 0.5229 - val_loss: 0.6931 - val_binary_accuracy: 0.5020\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.4951 - val_loss: 0.6929 - val_binary_accuracy: 0.5029\n",
       "Epoch 34/50\n",
-      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.5005 - val_loss: 0.6931 - val_binary_accuracy: 0.5238\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6928 - binary_accuracy: 0.5176 - val_loss: 0.6930 - val_binary_accuracy: 0.4922\n",
       "Epoch 35/50\n",
-      "2048/2048 [==============================] - 61s - loss: 0.6931 - binary_accuracy: 0.5278 - val_loss: 0.6931 - val_binary_accuracy: 0.5005\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5210 - val_loss: 0.6929 - val_binary_accuracy: 0.5151\n",
       "Epoch 36/50\n",
-      "2048/2048 [==============================] - 65s - loss: 0.6931 - binary_accuracy: 0.4956 - val_loss: 0.6931 - val_binary_accuracy: 0.5923\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5249 - val_loss: 0.6930 - val_binary_accuracy: 0.4858\n",
       "Epoch 37/50\n",
-      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.5161 - val_loss: 0.6931 - val_binary_accuracy: 0.4917\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6932 - binary_accuracy: 0.4814 - val_loss: 0.6930 - val_binary_accuracy: 0.4927\n",
       "Epoch 38/50\n",
-      "2048/2048 [==============================] - 68s - loss: 0.6931 - binary_accuracy: 0.5132 - val_loss: 0.6931 - val_binary_accuracy: 0.5029\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5117 - val_loss: 0.6930 - val_binary_accuracy: 0.5049\n",
       "Epoch 39/50\n",
-      "2048/2048 [==============================] - 70s - loss: 0.6930 - binary_accuracy: 0.5000 - val_loss: 0.6930 - val_binary_accuracy: 0.5156\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5015 - val_loss: 0.6930 - val_binary_accuracy: 0.5039\n",
       "Epoch 40/50\n",
-      "2048/2048 [==============================] - 71s - loss: 0.6931 - binary_accuracy: 0.4917 - val_loss: 0.6931 - val_binary_accuracy: 0.4912\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6929 - binary_accuracy: 0.5117 - val_loss: 0.6930 - val_binary_accuracy: 0.4922\n",
       "Epoch 41/50\n",
-      "2048/2048 [==============================] - 61s - loss: 0.6931 - binary_accuracy: 0.5054 - val_loss: 0.6931 - val_binary_accuracy: 0.5024\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5054 - val_loss: 0.6929 - val_binary_accuracy: 0.5117\n",
       "Epoch 42/50\n",
-      "2048/2048 [==============================] - 64s - loss: 0.6931 - binary_accuracy: 0.5225 - val_loss: 0.6931 - val_binary_accuracy: 0.5195\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5127 - val_loss: 0.6929 - val_binary_accuracy: 0.5132\n",
       "Epoch 43/50\n",
-      "2048/2048 [==============================] - 60s - loss: 0.6931 - binary_accuracy: 0.5103 - val_loss: 0.6931 - val_binary_accuracy: 0.5083\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6929 - binary_accuracy: 0.5269 - val_loss: 0.6930 - val_binary_accuracy: 0.4883\n",
       "Epoch 44/50\n",
-      "2048/2048 [==============================] - 62s - loss: 0.6931 - binary_accuracy: 0.5132 - val_loss: 0.6931 - val_binary_accuracy: 0.5764\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5112 - val_loss: 0.6929 - val_binary_accuracy: 0.5092\n",
       "Epoch 45/50\n",
-      "2048/2048 [==============================] - 69s - loss: 0.6930 - binary_accuracy: 0.5298 - val_loss: 0.6931 - val_binary_accuracy: 0.4858\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6930 - binary_accuracy: 0.5059 - val_loss: 0.6929 - val_binary_accuracy: 0.5029\n",
       "Epoch 46/50\n",
-      "2048/2048 [==============================] - 69s - loss: 0.6931 - binary_accuracy: 0.5303 - val_loss: 0.6931 - val_binary_accuracy: 0.5224\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6928 - binary_accuracy: 0.5298 - val_loss: 0.6930 - val_binary_accuracy: 0.4961\n",
       "Epoch 47/50\n",
-      "2048/2048 [==============================] - 67s - loss: 0.6931 - binary_accuracy: 0.5195 - val_loss: 0.6931 - val_binary_accuracy: 0.5029\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.4814 - val_loss: 0.6930 - val_binary_accuracy: 0.4902\n",
       "Epoch 48/50\n",
-      "2048/2048 [==============================] - 65s - loss: 0.6930 - binary_accuracy: 0.5132 - val_loss: 0.6931 - val_binary_accuracy: 0.4922\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5049 - val_loss: 0.6929 - val_binary_accuracy: 0.5073\n",
       "Epoch 49/50\n",
-      "2048/2048 [==============================] - 66s - loss: 0.6931 - binary_accuracy: 0.5015 - val_loss: 0.6931 - val_binary_accuracy: 0.4927\n",
+      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5000 - val_loss: 0.6929 - val_binary_accuracy: 0.5088\n",
       "Epoch 50/50\n",
-      "2048/2048 [==============================] - 62s - loss: 0.6932 - binary_accuracy: 0.4858 - val_loss: 0.6931 - val_binary_accuracy: 0.5000\n"
+      "2048/2048 [==============================] - 56s - loss: 0.6929 - binary_accuracy: 0.5166 - val_loss: 0.6930 - val_binary_accuracy: 0.4971\n"
      ]
     }
    ],
