result with: 4 layers ; sgd ; decay 1e-10 ; learning 0.0001 ; 4096 images ;

--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -36,14 +36,14 @@
     "cats_dir = \"cats/\";\n",
     "dogs_dir = \"dogs/\";\n",
     "\n",
-    "num_train_samples = 2048;\n",
+    "num_train_samples = 4096;\n",
     "num_test_samples = 2048;\n",
     "num_epoch = 50;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -60,16 +60,16 @@
     "\n",
     "\n",
     "filter_size = {\n",
-    "    'wc1' : 3,\n",
+    "    'wc1' : 5,\n",
     "    'wc2' : 3,\n",
     "    'wc3' : 3,\n",
     "    'wc4' : 3,\n",
     "}\n",
     "\n",
     "input_size = {\n",
-    "    'wc1' : (125, 125, 3),\n",
-    "    'wc2' : (63, 63, 32),\n",
-    "    'wc3' : (32, 32, 32),\n",
+    "    'wc1' : (250, 250, 3),\n",
+    "    'wc2' : (125, 125, 32),\n",
+    "    'wc3' : (63, 63, 32),\n",
     "    'wc4' : (16, 16, 64),\n",
     "}\n",
     "\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -181,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "img_width = 125;\n",
-    "img_height = 125;\n",
+    "img_width = 250;\n",
+    "img_height = 250;\n",
     "\n",
     "data_batch_size = 32;\n",
     "\n",
@@ -201,7 +201,7 @@
     "\n",
     "metric_types = ['accuracy'];\n",
     "\n",
-    "learning_rate = 0.0001;\n",
+    "learning_rate = 0.001;\n",
     "\n",
     "decay_rate = 1e-10;\n",
     "\n",
@@ -217,19 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "opt = SGD(lr=learning_rate, decay=decay_rate);\n",
-    "#opt = 'adadelta';\n",
+    "#opt = SGD(lr=learning_rate, decay=decay_rate);\n",
+    "opt = 'adadelta';\n",
     "\n",
     "model.compile(loss='binary_crossentropy',\n",
     "              optimizer=opt,\n",
     "              metrics=['binary_accuracy'])\n",
     "\n",
+    "\n",
+    "#model.load_weights('model_sgd_86')\n",
     "train_datagen = ImageDataGenerator(rescale = data_rescale_ratio, shear_range=data_sheer_range, zoom_range=data_zoom_range, horizontal_flip=data_horizontal_flip);\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale = data_rescale_ratio);"
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -269,105 +271,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.6931 - binary_accuracy: 0.4912 - val_loss: 0.6930 - val_binary_accuracy: 0.4990\n",
+      "4096/4096 [==============================] - 411s - loss: 0.6894 - binary_accuracy: 0.5374 - val_loss: 0.6770 - val_binary_accuracy: 0.5835\n",
       "Epoch 2/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5078 - val_loss: 0.6931 - val_binary_accuracy: 0.5044\n",
+      "4096/4096 [==============================] - 436s - loss: 0.6858 - binary_accuracy: 0.5542 - val_loss: 0.6712 - val_binary_accuracy: 0.5928\n",
       "Epoch 3/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.5063 - val_loss: 0.6930 - val_binary_accuracy: 0.5107\n",
+      "4096/4096 [==============================] - 435s - loss: 0.6610 - binary_accuracy: 0.5986 - val_loss: 0.6706 - val_binary_accuracy: 0.5671\n",
       "Epoch 4/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.5024 - val_loss: 0.6931 - val_binary_accuracy: 0.4976\n",
+      "4096/4096 [==============================] - 391s - loss: 0.6432 - binary_accuracy: 0.6262 - val_loss: 0.6017 - val_binary_accuracy: 0.6729\n",
       "Epoch 5/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.4995 - val_loss: 0.6930 - val_binary_accuracy: 0.5058\n",
+      "4096/4096 [==============================] - 392s - loss: 0.6184 - binary_accuracy: 0.6584 - val_loss: 0.5778 - val_binary_accuracy: 0.6702\n",
       "Epoch 6/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5015 - val_loss: 0.6931 - val_binary_accuracy: 0.4878\n",
+      "4096/4096 [==============================] - 386s - loss: 0.6020 - binary_accuracy: 0.6843 - val_loss: 0.5567 - val_binary_accuracy: 0.7188\n",
       "Epoch 7/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5190 - val_loss: 0.6930 - val_binary_accuracy: 0.5122\n",
+      "4096/4096 [==============================] - 388s - loss: 0.5854 - binary_accuracy: 0.6868 - val_loss: 0.5533 - val_binary_accuracy: 0.7232\n",
       "Epoch 8/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.5073 - val_loss: 0.6932 - val_binary_accuracy: 0.4776\n",
+      "4096/4096 [==============================] - 410s - loss: 0.5664 - binary_accuracy: 0.6963 - val_loss: 0.5334 - val_binary_accuracy: 0.7339\n",
       "Epoch 9/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5166 - val_loss: 0.6930 - val_binary_accuracy: 0.5093\n",
+      "4096/4096 [==============================] - 432s - loss: 0.5625 - binary_accuracy: 0.7046 - val_loss: 0.5061 - val_binary_accuracy: 0.7544\n",
       "Epoch 10/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5005 - val_loss: 0.6930 - val_binary_accuracy: 0.5000\n",
+      "4096/4096 [==============================] - 480s - loss: 0.5596 - binary_accuracy: 0.7166 - val_loss: 0.5152 - val_binary_accuracy: 0.7568\n",
       "Epoch 11/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5054 - val_loss: 0.6931 - val_binary_accuracy: 0.4917\n",
+      "4096/4096 [==============================] - 435s - loss: 0.5399 - binary_accuracy: 0.7327 - val_loss: 0.4923 - val_binary_accuracy: 0.7583\n",
       "Epoch 12/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5063 - val_loss: 0.6929 - val_binary_accuracy: 0.5234\n",
+      "4096/4096 [==============================] - 394s - loss: 0.5420 - binary_accuracy: 0.7283 - val_loss: 0.4846 - val_binary_accuracy: 0.7573\n",
       "Epoch 13/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5132 - val_loss: 0.6930 - val_binary_accuracy: 0.5005\n",
+      "4096/4096 [==============================] - 438s - loss: 0.5238 - binary_accuracy: 0.7373 - val_loss: 0.5063 - val_binary_accuracy: 0.7549\n",
       "Epoch 14/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5146 - val_loss: 0.6930 - val_binary_accuracy: 0.5015\n",
+      "4096/4096 [==============================] - 496s - loss: 0.5301 - binary_accuracy: 0.7434 - val_loss: 0.4891 - val_binary_accuracy: 0.7671\n",
       "Epoch 15/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5088 - val_loss: 0.6930 - val_binary_accuracy: 0.4951\n",
+      "4096/4096 [==============================] - 463s - loss: 0.5226 - binary_accuracy: 0.7417 - val_loss: 0.4851 - val_binary_accuracy: 0.7626\n",
       "Epoch 16/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.5044 - val_loss: 0.6930 - val_binary_accuracy: 0.4985\n",
+      "4096/4096 [==============================] - 424s - loss: 0.5077 - binary_accuracy: 0.7600 - val_loss: 0.5247 - val_binary_accuracy: 0.7520\n",
       "Epoch 17/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.4990 - val_loss: 0.6930 - val_binary_accuracy: 0.5083\n",
+      "4096/4096 [==============================] - 443s - loss: 0.5209 - binary_accuracy: 0.7368 - val_loss: 0.4789 - val_binary_accuracy: 0.7808\n",
       "Epoch 18/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5088 - val_loss: 0.6930 - val_binary_accuracy: 0.5039\n",
+      "4096/4096 [==============================] - 435s - loss: 0.4913 - binary_accuracy: 0.7632 - val_loss: 0.4594 - val_binary_accuracy: 0.7798\n",
       "Epoch 19/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5044 - val_loss: 0.6930 - val_binary_accuracy: 0.4985\n",
+      "4096/4096 [==============================] - 406s - loss: 0.5201 - binary_accuracy: 0.7554 - val_loss: 0.4968 - val_binary_accuracy: 0.7583\n",
       "Epoch 20/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.4946 - val_loss: 0.6930 - val_binary_accuracy: 0.5068\n",
+      "4096/4096 [==============================] - 434s - loss: 0.4965 - binary_accuracy: 0.7598 - val_loss: 0.4746 - val_binary_accuracy: 0.7759\n",
       "Epoch 21/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5054 - val_loss: 0.6930 - val_binary_accuracy: 0.5015\n",
+      "4096/4096 [==============================] - 418s - loss: 0.4795 - binary_accuracy: 0.7756 - val_loss: 0.4494 - val_binary_accuracy: 0.7842\n",
       "Epoch 22/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5151 - val_loss: 0.6930 - val_binary_accuracy: 0.5078\n",
+      "4096/4096 [==============================] - 429s - loss: 0.4913 - binary_accuracy: 0.7646 - val_loss: 0.4503 - val_binary_accuracy: 0.7840\n",
       "Epoch 23/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5044 - val_loss: 0.6931 - val_binary_accuracy: 0.4912\n",
+      "4096/4096 [==============================] - 445s - loss: 0.4754 - binary_accuracy: 0.7786 - val_loss: 0.4522 - val_binary_accuracy: 0.7803\n",
       "Epoch 24/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5112 - val_loss: 0.6930 - val_binary_accuracy: 0.5034\n",
+      "4096/4096 [==============================] - 438s - loss: 0.4832 - binary_accuracy: 0.7722 - val_loss: 0.4477 - val_binary_accuracy: 0.7957\n",
       "Epoch 25/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5117 - val_loss: 0.6930 - val_binary_accuracy: 0.4985\n",
+      "4096/4096 [==============================] - 450s - loss: 0.4611 - binary_accuracy: 0.7825 - val_loss: 0.4471 - val_binary_accuracy: 0.7891\n",
       "Epoch 26/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5039 - val_loss: 0.6929 - val_binary_accuracy: 0.5088\n",
+      "4096/4096 [==============================] - 424s - loss: 0.4490 - binary_accuracy: 0.7942 - val_loss: 0.4306 - val_binary_accuracy: 0.7928\n",
       "Epoch 27/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5010 - val_loss: 0.6930 - val_binary_accuracy: 0.5092\n",
+      "4096/4096 [==============================] - 449s - loss: 0.4596 - binary_accuracy: 0.7888 - val_loss: 0.4105 - val_binary_accuracy: 0.8101\n",
       "Epoch 28/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.4907 - val_loss: 0.6930 - val_binary_accuracy: 0.4961\n",
+      "4096/4096 [==============================] - 434s - loss: 0.4449 - binary_accuracy: 0.7930 - val_loss: 0.4379 - val_binary_accuracy: 0.8006\n",
       "Epoch 29/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5024 - val_loss: 0.6931 - val_binary_accuracy: 0.4835\n",
+      "4096/4096 [==============================] - 456s - loss: 0.4621 - binary_accuracy: 0.7915 - val_loss: 0.4041 - val_binary_accuracy: 0.8267\n",
       "Epoch 30/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5093 - val_loss: 0.6930 - val_binary_accuracy: 0.4995\n",
+      "4096/4096 [==============================] - 421s - loss: 0.4309 - binary_accuracy: 0.8054 - val_loss: 0.4015 - val_binary_accuracy: 0.8171\n",
       "Epoch 31/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5098 - val_loss: 0.6930 - val_binary_accuracy: 0.4995\n",
+      "4096/4096 [==============================] - 431s - loss: 0.4361 - binary_accuracy: 0.7986 - val_loss: 0.4338 - val_binary_accuracy: 0.7959\n",
       "Epoch 32/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5151 - val_loss: 0.6930 - val_binary_accuracy: 0.5088\n",
+      "4096/4096 [==============================] - 397s - loss: 0.4429 - binary_accuracy: 0.8018 - val_loss: 0.3906 - val_binary_accuracy: 0.8205\n",
       "Epoch 33/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.4951 - val_loss: 0.6929 - val_binary_accuracy: 0.5029\n",
+      "4096/4096 [==============================] - 387s - loss: 0.4246 - binary_accuracy: 0.8105 - val_loss: 0.4261 - val_binary_accuracy: 0.7964\n",
       "Epoch 34/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6928 - binary_accuracy: 0.5176 - val_loss: 0.6930 - val_binary_accuracy: 0.4922\n",
+      "4096/4096 [==============================] - 388s - loss: 0.4376 - binary_accuracy: 0.8020 - val_loss: 0.4010 - val_binary_accuracy: 0.8103\n",
       "Epoch 35/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5210 - val_loss: 0.6929 - val_binary_accuracy: 0.5151\n",
+      "4096/4096 [==============================] - 387s - loss: 0.4156 - binary_accuracy: 0.8098 - val_loss: 0.4032 - val_binary_accuracy: 0.8188\n",
       "Epoch 36/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5249 - val_loss: 0.6930 - val_binary_accuracy: 0.4858\n",
+      "4096/4096 [==============================] - 412s - loss: 0.4128 - binary_accuracy: 0.8132 - val_loss: 0.3894 - val_binary_accuracy: 0.8257\n",
       "Epoch 37/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6932 - binary_accuracy: 0.4814 - val_loss: 0.6930 - val_binary_accuracy: 0.4927\n",
+      "4096/4096 [==============================] - 437s - loss: 0.4219 - binary_accuracy: 0.8008 - val_loss: 0.3910 - val_binary_accuracy: 0.8262\n",
       "Epoch 38/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5117 - val_loss: 0.6930 - val_binary_accuracy: 0.5049\n",
+      "4096/4096 [==============================] - 432s - loss: 0.4229 - binary_accuracy: 0.8030 - val_loss: 0.4004 - val_binary_accuracy: 0.8232\n",
       "Epoch 39/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5015 - val_loss: 0.6930 - val_binary_accuracy: 0.5039\n",
+      "4096/4096 [==============================] - 5846s - loss: 0.4132 - binary_accuracy: 0.8171 - val_loss: 0.4081 - val_binary_accuracy: 0.8120\n",
       "Epoch 40/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6929 - binary_accuracy: 0.5117 - val_loss: 0.6930 - val_binary_accuracy: 0.4922\n",
+      "4096/4096 [==============================] - 20837s - loss: 0.4046 - binary_accuracy: 0.8210 - val_loss: 0.3930 - val_binary_accuracy: 0.8198\n",
       "Epoch 41/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5054 - val_loss: 0.6929 - val_binary_accuracy: 0.5117\n",
+      "4096/4096 [==============================] - 395s - loss: 0.4124 - binary_accuracy: 0.8186 - val_loss: 0.4039 - val_binary_accuracy: 0.8181\n",
       "Epoch 42/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5127 - val_loss: 0.6929 - val_binary_accuracy: 0.5132\n",
+      "4096/4096 [==============================] - 397s - loss: 0.3976 - binary_accuracy: 0.8174 - val_loss: 0.4143 - val_binary_accuracy: 0.8184\n",
       "Epoch 43/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6929 - binary_accuracy: 0.5269 - val_loss: 0.6930 - val_binary_accuracy: 0.4883\n",
+      "4096/4096 [==============================] - 403s - loss: 0.4091 - binary_accuracy: 0.8169 - val_loss: 0.3640 - val_binary_accuracy: 0.8434\n",
       "Epoch 44/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5112 - val_loss: 0.6929 - val_binary_accuracy: 0.5092\n",
+      "4096/4096 [==============================] - 421s - loss: 0.4068 - binary_accuracy: 0.8206 - val_loss: 0.4418 - val_binary_accuracy: 0.7969\n",
       "Epoch 45/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.6930 - binary_accuracy: 0.5059 - val_loss: 0.6929 - val_binary_accuracy: 0.5029\n",
+      "4096/4096 [==============================] - 406s - loss: 0.3896 - binary_accuracy: 0.8225 - val_loss: 0.3938 - val_binary_accuracy: 0.8186\n",
       "Epoch 46/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6928 - binary_accuracy: 0.5298 - val_loss: 0.6930 - val_binary_accuracy: 0.4961\n",
+      "4096/4096 [==============================] - 411s - loss: 0.3952 - binary_accuracy: 0.8254 - val_loss: 0.3689 - val_binary_accuracy: 0.8389\n",
       "Epoch 47/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6931 - binary_accuracy: 0.4814 - val_loss: 0.6930 - val_binary_accuracy: 0.4902\n",
+      "4096/4096 [==============================] - 383s - loss: 0.3810 - binary_accuracy: 0.8350 - val_loss: 0.3503 - val_binary_accuracy: 0.8458\n",
       "Epoch 48/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5049 - val_loss: 0.6929 - val_binary_accuracy: 0.5073\n",
+      "4096/4096 [==============================] - 383s - loss: 0.3888 - binary_accuracy: 0.8286 - val_loss: 0.4091 - val_binary_accuracy: 0.8091\n",
       "Epoch 49/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6930 - binary_accuracy: 0.5000 - val_loss: 0.6929 - val_binary_accuracy: 0.5088\n",
+      "4096/4096 [==============================] - 383s - loss: 0.3909 - binary_accuracy: 0.8313 - val_loss: 0.3763 - val_binary_accuracy: 0.8332\n",
       "Epoch 50/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.6929 - binary_accuracy: 0.5166 - val_loss: 0.6930 - val_binary_accuracy: 0.4971\n"
+      "4096/4096 [==============================] - 384s - loss: 0.3772 - binary_accuracy: 0.8313 - val_loss: 0.3587 - val_binary_accuracy: 0.8384\n"
      ]
     }
    ],
