changed os directory to generic

--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -22,13 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "files_data_dir = \"/Users/ravishchawla/workspace/machinelearning/datasets/dogs_vs_cats/\";\n",
+    "home = expanduser(\"~\");\n",
+    "files_data_dir = home + \"/workspace/machinelearning/datasets/dogs_vs_cats/\";\n",
     "\n",
     "train_data_dir = files_data_dir + \"train/\";\n",
     "test_data_dir = files_data_dir + \"test/\";\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
