--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
     "\n",
     "import os;\n",
     "import os.path;\n",
-    "from os.path impo\n",
+    "from os.path import expanduser;\n",
     "import pickle;"
    ]
   },
